# robobuggy-software

./: .gitignore  README.md  docker-dev.yml  docker_exec.sh  nand_telematics_layout.json  python-requirements.txt  sc_telematics_layout.json
rb_ws/src/buggy/: CMakeLists.txt  package.xml
rb_ws/src/buggy/config/: nand-mockroll.yaml  nand-roll.yaml  sc-mockroll.yaml  sc-roll.yaml  sim_double.yaml  sim_single_sc.yaml  sim_single_velocity.yaml
rb_ws/src/buggy/launch/: nand-main.xml  nand-system.xml  sc-main.xml  sc-system.xml  sim_2d_double.xml  sim_2d_single.xml  sim_single_vision.xml  vision.xml
rb_ws/src/buggy/msg/: NANDDebugInfoMsg.msg  NANDRawGPSMsg.msg  SCDebugInfoMsg.msg
rb_ws/src/buggy/paths/: buggycourse_inner.json  buggycourse_nand.json  buggycourse_outer.json  buggycourse_sc.json  buggycourse_sc_freeroll.json  buggycourse_sc_opt.json  cut_square_inner.json  cut_square_outer.json  freeroll_optim.json
rb_ws/src/buggy/paths/archive/: buggycourse_nand.json  buggycourse_pavedline.json
rb_ws/src/buggy/scripts/: buggy_state_converter.py
rb_ws/src/buggy/scripts/controller/: controller_node.py  controller_superclass.py  stanley_controller.py
rb_ws/src/buggy/scripts/debug/: debug_steer.py  set_steer.py
rb_ws/src/buggy/scripts/estimation/: nand_estimator.py  steer_offset_estimator.py  ukf.py  ukf_node.py  ukf_utils.py
rb_ws/src/buggy/scripts/path_planner/: path_planner.py
rb_ws/src/buggy/scripts/serial/: host_comm.py  ros_to_bnyahaj.py
rb_ws/src/buggy/scripts/simulator/: engine.py  velocity_updater.py
rb_ws/src/buggy/scripts/telemetry/: telematics.py
rb_ws/src/buggy/scripts/util/: LowPassFilter.py  constants.py  emap.py  emapViz.py  errorCalculator.py  (+3 more)
(+10 files in other folders)
